# cbmc-viewer

./: .gitignore  404.html  CODEOWNERS  Makefile  NOTICE  README.md  cbmc-viewer  cbmc-viewer.md  compare-coverage.py  compare-result.py  configt.py  coveraget.py  filet.py  index.html  loopt.py  make-coverage  make-coverage.md  make-loop  make-loop.md  make-property  make-property.md  make-reachable  make-result  make-result.md  make-source  make-source.md  make-symbol  make-symbol.md  make-trace  make-trace.md  markup_code.py  markup_link.py  markup_summary.py  markup_trace.py  optionst.py  parse.py  print.html  propertyt.py  pyproject.toml  reachablet.py  (+17 more)
.github/cloudformation/: README.md  token.yaml
.github/workflows/: bump-brew-formula.yaml  create_tagged_release.py  ctags.yaml  docker.yaml  github_release.py  publish.yaml  release-brew.yaml  release-pypi.yaml  release.yaml  run-differential-tests.yaml  run-tests.yaml  tagged_release_message.md  tes2.yaml  test.yaml
cbmc_viewer/: aliast.py  arrayt.py  byteopt.py  clauset.py  configt.py  coveraget.py  filet.py  loopt.py  make_alias.py  make_array.py  make_byteop.py  make_clause.py  make_coverage.py  make_loop.py  make_memop.py  make_metric_report.py  make_property.py  make_reachable.py  make_result.py  make_source.py  make_symbol.py  make_trace.py  markup_code.py  markup_link.py  markup_summary.py  markup_trace.py  memopt.py  metric_reportt.py  optionst.py  propertyt.py  reachablet.py  report.py  resultt.py  runt.py  source_language.py  sourcet.py  srcloct.py  symbol_table.py  symbolt.py  templates.py  (+4 more)
cbmc_viewer/doc/: make-alias.md  make-array.md  make-byteop.md  make-clause.md  make-memop.md  make-metric-report.md
cbmc_viewer/templates/: alias.jinja.html  array.jinja.html  (+7 more)
contributing/: index.html
docs/: book.toml
installation/: index.html
reference-manual/: cbmc-viewer-coverage.html  cbmc-viewer-loop.html  cbmc-viewer-property.html  cbmc-viewer-reachable.html  cbmc-viewer-result.html  cbmc-viewer-source.html  cbmc-viewer-symbol.html  cbmc-viewer-trace.html  cbmc-viewer.html  index.html
resources/: index.html
summary/: Makefile  README.md  projects.json  stubs.py  summary.py
templates/: code.jinja.html  link.jinja.html  summary.jinja.html  trace.jinja.html
tests/: .gitignore  Makefile  build-viewer-reports  compare-result  compare-source  compare-viewer-reports
tutorial/: index.html
(+1719 files in other folders)
