# See https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = cbmc-viewer
version = 2.14
author = Mark R. Tuttle
author_email = mrtuttle@amazon.com
description = CBMC viewer produces a browsable summary of CBMC findings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/model-checking/cbmc-viewer
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    jinja2
    setuptools
    voluptuous
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
cbmc_viewer = doc/*, templates/*, viewer.css, viewer.js

[options.entry_points]
console_scripts =
    cbmc-viewer = cbmc_viewer.cbmc_viewer:main
    make-coverage = cbmc_viewer.make_coverage:main
    make-loop = cbmc_viewer.make_loop:main
    make-property = cbmc_viewer.make_property:main
    make-reachable = cbmc_viewer.make_reachable:main
    make-result = cbmc_viewer.make_result:main
    make-source = cbmc_viewer.make_source:main
    make-symbol = cbmc_viewer.make_symbol:main
    make-trace = cbmc_viewer.make_trace:main
