# See https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = cbmc-viewer
version = 3.7
author = Mark R. Tuttle
author_email = mrtuttle@amazon.com
description = CBMC viewer produces a browsable summary of CBMC findings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/model-checking/cbmc-viewer
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    jinja2
    setuptools
    voluptuous
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
cbmc_viewer =
    etc/*
    etc/bash_completion.d/*
    templates/*
    viewer.css
    viewer.js

[options.entry_points]
console_scripts =
    cbmc-viewer = cbmc_viewer.cbmc_viewer:main
